charts/govcom/charts/dashboard/ingress-rocketchat-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dashboard
  namespace: ibtikarchart
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "production-cert-issuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dashboardgovcom.129.212.169.222.sslip.io
      secretName: dashboard-tls
  rules:
    - host: dashboardgovcom.129.212.169.222.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 3000
